--- a/QA model/requirements.txt
+++ b/QA model/requirements.txt
@@ -3,6 +3,7 @@ langchain
 langchain-community
 langchain-groq
 faiss-cpu
-sentence-transformers
+transformers
+huggingface-hub
 python-dotenv
-PyPDF2
+
