--- a/QA model/requirements.txt
+++ b/QA model/requirements.txt
@@ -1,9 +1,9 @@
-streamlit
-langchain
-langchain-community
-langchain-groq
-faiss-cpu
-transformers
-huggingface-hub
-python-dotenv
+streamlit==1.35.0
+langchain==0.2.1
+langchain-community==0.2.1
+langchain-groq==0.1.3
+faiss-cpu==1.7.4
+transformers==4.41.1
+huggingface-hub==0.23.0
+python-dotenv==1.0.1
 
